Home Slider font size & letter spacing fixed

--- a/components/swiper/HomeSlider.css
+++ b/components/swiper/HomeSlider.css
@@ -1,7 +1,5 @@
 .swiper {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
   margin-top: 50px;
 }
 
